argocd-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /   # 讓所有路徑都導到 /
spec:
  ingressClassName: nginx
  rules:
  - host: nodejs.linx.blog
    http:
      paths:
      - path: /(.*)
        pathType: Prefix  
        backend:
          service:
            name: service1
            port:
              number: 3005
